Bug 53258 - Segmentation fault from psp::PrintFontManager::analyzeTrueTypeFile with Aquabase-spanish-support
Summary: Segmentation fault from psp::PrintFontManager::analyzeTrueTypeFile with Aquab...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: x86-64 (AMD64) Linux (All)
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:3.7.0 target:3.6.2
Keywords:
: 53366 53831 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-08 16:54 UTC by Pete K.
Modified: 2012-08-22 09:41 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
output from "gdb soffice.bin" (6.03 KB, text/plain)
2012-08-08 16:54 UTC, Pete K.
Details
strace output (605.11 KB, text/plain)
2012-08-13 13:21 UTC, Pete K.
Details
full backtrace (no debug symbols) (10.65 KB, text/plain)
2012-08-13 13:26 UTC, Pete K.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pete K. 2012-08-08 16:54:59 UTC
Created attachment 65298 [details]
output from "gdb soffice.bin"

Just downloaded and installed LO 3.6 release on RHEL 6.3. When trying to run it from desktop launcher, nothing seems to happen.  From command line, I get "segmentation fault".

3.5.5 was uninstalled before installing 3.6.  3.5.5 worked fine.

Tried with a fresh user profile (renamed "libreoffice/3/user" directory to "user-35") and did get a new "user" directory created, but same segfault.

gdb /opt/libreoffice36/program/soffice.bin actually shows the splash screen, but then freezes.  GDB output is attached.

For reference, "yum list libreoffice*" shows:

libreoffice3.6.x86_64                                3.6.0.4-104               @/libreoffice3.6-3.6.0.4-104.x86_64                
libreoffice3.6-base.x86_64                           3.6.0.4-104               @/libreoffice3.6-base-3.6.0.4-104.x86_64           
libreoffice3.6-calc.x86_64                           3.6.0.4-104               @/libreoffice3.6-calc-3.6.0.4-104.x86_64           
libreoffice3.6-dict-en.x86_64                        3.6.0.4-104               @/libreoffice3.6-dict-en-3.6.0.4-104.x86_64        
libreoffice3.6-dict-es.x86_64                        3.6.0.4-104               @/libreoffice3.6-dict-es-3.6.0.4-104.x86_64        
libreoffice3.6-dict-fr.x86_64                        3.6.0.4-104               @/libreoffice3.6-dict-fr-3.6.0.4-104.x86_64        
libreoffice3.6-draw.x86_64                           3.6.0.4-104               @/libreoffice3.6-draw-3.6.0.4-104.x86_64           
libreoffice3.6-en-US.x86_64                          3.6.0.4-104               @/libreoffice3.6-en-US-3.6.0.4-104.x86_64          
libreoffice3.6-freedesktop-menus.noarch              3.6.0-104                 @/libreoffice3.6-freedesktop-menus-3.6.0-104.noarch
libreoffice3.6-impress.x86_64                        3.6.0.4-104               @/libreoffice3.6-impress-3.6.0.4-104.x86_64        
libreoffice3.6-math.x86_64                           3.6.0.4-104               @/libreoffice3.6-math-3.6.0.4-104.x86_64           
libreoffice3.6-stdlibs.x86_64                        3.6.0.4-104               @/libreoffice3.6-stdlibs-3.6.0.4-104.x86_64        
libreoffice3.6-ure.x86_64                            3.6.0.4-104               @/libreoffice3.6-ure-3.6.0.4-104.x86_64            
libreoffice3.6-writer.x86_64                         3.6.0.4-104               @/libreoffice3.6-writer-3.6.0.4-104.x86_64       

And my system:

[pkidwell@oc3243065148 Desktop]$ uname -a
Linux oc3243065148 2.6.32-279.el6.x86_64 #1 SMP Wed Jun 20 01:32:12 EDT 2012 x86_64 x86_64 x86_64 GNU/Linux
Comment 1 Stephan Bergmann 2012-08-10 15:25:20 UTC
@caolan, rings a bell maybe? some font files out there known to cause trouble?
Comment 2 Julien Nabet 2012-08-12 11:52:26 UTC
Did you install any specific font ?
Could you take a look to http://wiki.documentfoundation.org/BugReport#How_to_get_backtrace_.28on_Linux.29 to retrieve an useful backtrace (I mean with symbols) ?
Comment 3 Caolán McNamara 2012-08-13 11:08:55 UTC
There have been quite a few fonts in the past which tripped us up. a strace would be sufficient to find the last font file opened which would let us know which one it is, so...

can I get the output of 

strace -f /opt/libreoffice3.6/program/soffice.bin > /tmp/strace.log 2>&1
Comment 4 Pete K. 2012-08-13 13:21:42 UTC
Created attachment 65496 [details]
strace output
Comment 5 Pete K. 2012-08-13 13:26:52 UTC
Created attachment 65497 [details]
full backtrace (no debug symbols)

Note that there are 2 runs in this trace - first one without the "bad" font, second one with.  Of course, first one ran fine.
Comment 6 Pete K. 2012-08-13 13:29:22 UTC
OK - I didn't realize that when I add an attachment, Bugzilla doesn't save comments I typed first.  

The "culprit" font is Aquabase-spanish-support.ttf, and when I removed that one, LO 3.6 ran fine.  That's a good-enough workaround for me right now, so I'm happy. That said, I've attached the strace (which identifies the problem font) as well as the full backtrace, for those who are intensely curious.  Note that the backtrace was created without debugging symbols installed; as this is working for me now, I won't be installing those, but hopefully it will help anyway!

Thanks for all the support!
Comment 7 Urmas 2012-08-13 14:19:34 UTC
There was also this:
https://issues.apache.org/ooo/show_bug.cgi?id=107552
Comment 8 Caolán McNamara 2012-08-13 14:51:41 UTC
The return of the killer Aquabase-spanish-support in a new location
Comment 9 Not Assigned 2012-08-13 15:01:33 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=90496967fe7ddb8a616dce8c70013fa4450c5983

Resolves: fdo#53258 Aquabase-spanish-support busts ttf reader again
Comment 10 Not Assigned 2012-08-16 07:38:52 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=16be10d016c8ecb2e5df21466510bc0e9e2e3a27&g=libreoffice-3-6

Resolves: fdo#53258 Aquabase-spanish-support busts ttf reader again


It will be available in LibreOffice 3.6.2.
Comment 11 Julien Nabet 2012-08-20 22:03:54 UTC
*** Bug 53366 has been marked as a duplicate of this bug. ***
Comment 12 Stephan Bergmann 2012-08-22 09:41:03 UTC
*** Bug 53831 has been marked as a duplicate of this bug. ***