Resolves: fdo#53258 Aquabase-spanish-support busts ttf reader again

Once as #i107552# and now again as fdo#53258. This is one sick puppy
of a font. It makes fontforge and fontconfig jump through hoops
as well.

Change-Id: Ifee780bb1463dca4e8b045828a07369e6c3863fc